--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,29 @@
+* {
+	margin: 0px;
+	padding: 0px;
+	box-sizing: border-box;
+	font-family: 'Cronos Pro Regular';
+
+}
+
+main{
+	width:95%;
+	max-width: 700px;
+  height: 60%;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+	font-family: 'Cronos Pro Regular';
+}
+
 .App {
-  text-align: center;
+  width: 100vw;
+  height:100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
 }
 
 .App-logo {
@@ -7,15 +31,9 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 0.01s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,11 +46,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
