--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   width: 100vw;
   height:100vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
 }
