Added Validation to user register + Submit Button on test password + footer

--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,9 @@
 
 .App {
   width: 100vw;
-  height:100vh;
+  height:99vh;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
 }
